# convert-case-extras

./: .gitignore  Cargo.toml  README.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: cz8z7qlvlp4rcvqllf3f0fv7krnhz1j2-source
src/: lib.rs
